[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.15.0"
ic-cdk-macros = "0.15.0"
candid = "0.10.0"
serde = "1.0.140"
serde_bytes = "0.11"
log = "0.4"
common = { path = "../../common/common" }
thiserror = "1.0"
anyhow = "1.0.58"

[dev-dependencies]
test_common = { path = "../../common/test_common" }
async-std = { version = "1.12", features = ["attributes"] }

[build-dependencies]
anyhow = "1.0.58"
build_common = { path = "../../common/build_common" }

[features]
default = []
dev_env = []
