[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.13.1"
ic-cdk-macros = "0.9.0"
candid = "0.10.6"
serde = "1.0.197"
serde_bytes = "0.11"
anyhow = "1.0.81"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1.79"
url = "2.5.0"
num-bigint = "0.4.4"
yansi = "0.5.1"
once_cell = "1.19"
flate2 = "1.0"
const_env = "0.1.2"
sha2 = "0.10.8"
hex = "0.4.3"
crc32fast = "1.4.0"

[dev-dependencies]
env_logger = "0.9.0"
rstest = "0.15.0"

[build-dependencies]
anyhow = "1.0.58"
build_common = { path = "../build_common" }
