[package]
name = "common_actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13.1"
ic-cdk-macros = "0.9.0"
candid = "0.10.6"
serde = "1.0.197"
serde_bytes = "0.11"
async-trait = "0.1.79"
common = { path = "../common"}
log = "0.4"
once_cell = "1.19"

[build-dependencies]
vergen = { version = "7", default-features = false, features = ["build", "git"] }
anyhow = "1.0.58"
