[package]
name = "test_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.13.1"
ic-cdk-macros = "0.9.0"
candid = "0.10.6"
serde = "1.0.197"
serde_bytes = "0.11"
common = { path = "../common" }
log = "0.4"
env_logger = "0.11.3"
mockall = "0.12.1"
async-trait = "0.1.79"
rstest = "0.18.2"
hex = "0.4.3"
crc32fast = "1.4.0"
